--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="sidebar-info">
           <figure class="avatar-box">
             <img
-              src="./assets/images/Crop image project-modified-modified.png"
+              src="./assets/images/personal.png"
               alt="Muhammad Muzammal"
               
             />
